Fix custom select layout problem
Fixed
1. Shadow was cut by overflow hidden set in `.widget`
2. Layout jumpy when parent of dropdown element is too small

--- a/authui/src/authflowv2/components/select.css
+++ b/authui/src/authflowv2/components/select.css
@@ -91,6 +91,10 @@
     --select__empty-text-color: var(--color-neutral-300);
   }
 
+  .select__dropdown-container {
+    @apply fixed overflow-visible;
+  }
+
   .select__dropdown {
     @apply absolute;
     @apply flex;
